# lumin-studio

./: .dockerignore  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  Cat Peek - Behavior Spec.md  Makefile  design-system.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  spec.md  tsconfig.base.json  turbo.json
.claude/: launch.json  settings.json
.github/: PULL_REQUEST_TEMPLATE.md
design_handoff_wedding_invitation/: Admin.dc.html  HANDOFF.md  README.md  Wedding Invitation.dc.html  Wishes Section Options.dc.html  guest-db.js
designs/: Lumin Admin - Hi-fi.dc.html  Lumin Admin Mobile - Hi-fi.dc.html  Lumin Admin Wireframes.dc.html  Lumin Cat Peek.dc.html  Lumin Dev Handoff.dc.html  Lumin Extension - Hi-fi.dc.html  Lumin Extension Wireframes.dc.html  Lumin Pet Tag - Hi-fi.dc.html  Lumin Storefront - Hi-fi.dc.html  Lumin Wireframes.dc.html
docs/: README.md  acceptance.md  active-context.md  agent-harness-learnings-r2.md  agent-harness-learnings-superpowers.md  agent-harness-learnings.md  agent-harness.md  architecture.md  compliance.md  conventions.md  decisions.md  operations.md  plan.md
e2e/: README.md  package.json  playwright.config.ts  tsconfig.json
infra/: .env.example  (+3 more)
services/asset-worker/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
services/asset-worker/pysrc/: _bl_render.py  _color.py  ingest.py  render.py  requirements.txt
services/asset-worker/src/: callback.rs  config.rs  ingest.rs  job.rs  main.rs  model_ingest.rs  objectstore.rs  pipeline.rs  processor.rs  render.rs  sprite_render.rs  worker.rs
(+764 files in other folders)
