[package]
name = "asset-worker"
version = "0.0.0"
edition = "2021"
description = "Lumin Studio asset pipeline worker (Rust + Blender)"
publish = false

[dependencies]
anyhow = "1.0.102"
async-nats = "0.49.1"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
