[package]
name = "asset-worker"
version = "0.0.0"
edition = "2021"
description = "Lumin Studio asset pipeline worker (Rust + Blender)"
publish = false

[dependencies]
anyhow = "1.0.102"
async-nats = "0.49.1"
futures = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
